--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-checkbox3states-plugin",
-	"name": "Checkbox 3 states",
-	"version": "1.1.5",
+	"id": "obsidian-bujo-checkbox",
+	"name": "BulletJournal Checkbox States",
+	"version": "0.1.0",
 	"minAppVersion": "0.15.0",
 	"description": "This is a simple plugin for add a third state to checkbox list.",
-	"author": "Renaud Héluin @ NovaGaïa",
-	"authorUrl": "https://novagaia.fr",
+	"author": "Matthijs Wolters",
+	"authorUrl": "m.s.wolters@proton.me",
 	"isDesktopOnly": false
 }
