--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "obsidian-bujo-checkbox",
 	"name": "BulletJournal Checkbox States",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"minAppVersion": "0.15.0",
-	"description": "This is a simple plugin for add a third state to checkbox list.",
+	"description": "This is a simple plugin that adds 3 new states to the task checkbox, inspired by the BulletJournal method.",
 	"author": "Matthijs Wolters",
 	"authorUrl": "m.s.wolters@proton.me",
 	"isDesktopOnly": false
